# spoon

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
samples/: CMakeLists.txt  main.cpp
spoon/: CMakeLists.txt  export.h  model.cpp  model.h
